packages/react-components/src/components/tab/tab.module.css
.List {
  --separator-size: 2px;

  border-bottom: var(--separator-size) solid var(--dimmed-1);
}

.Trigger {
  position: relative;
  overflow: unset;
  border-radius: 0;
  backdrop-filter: none;
  background: none;
  font-weight: token(--font-weight-semi-bold);
  outline-offset: calc(var(--separator-size) * -1);
  color: var(--dimmed-6);
  appearance: none;
  padding: token(--space-8) token(--space-16);
  block-size: token(--space-48);
  border: 0;
  background-color: transparent;
  font-family: inherit;
  font-size: inherit;
  white-space: nowrap;
  flex-shrink: 0;

  &:not([aria-disabled='true']) {
    color: var(--dimmed-5);
    backdrop-filter: none;
  }

  &.Trigger:not([aria-disabled='true']):is(:hover, :focus, :active) {
    background: none;
    color: var(--global-foreground);
    backdrop-filter: none;
  }

  &.Trigger[aria-disabled='true'] {
    background: none;
    backdrop-filter: none;
  }

  &[data-state='active'] {
    -webkit-text-stroke: 0.4px var(--global-foreground);
    color: var(--global-foreground);
  }
}

.Highlight {
  position: absolute;
  bottom: calc(var(--separator-size) * -1);
  width: 100%;
  height: 4px;
  background: var(--cta-default);
  pointer-events: none;
  border-radius: 2px 2px 0 0;
}

.Panel {
  animation: fade-in token(--duration-200);
  animation-timing-function: token(--easing-entrance));
}

@keyframes fade-in {
  0% {
    opacity: 0%;
    transform: translate(var(--fade-from-x, 0), var(--fade-from-y, 0));
  }

  100% {
    opacity: unset;
    transform: none;
  }
}

